--- a/style.css
+++ b/style.css
@@ -14,8 +14,9 @@ body
 {
 
     height: 320px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: rgb(250, 226, 7);
+    font-family: 'Oswald', sans-serif;
+    color: rgb(248, 223, 0);
+    letter-spacing: 5px;
     font-size: 50px;
     text-align:center;
     padding-top: 5px;
@@ -27,45 +28,50 @@ body
 
 }
 
+
 #nav
 {
     float: left;
-    width: 160px;
+    width: 180px;
     min-height: 610px;
-    background: rgb(78, 97, 80) url("Img/nav.jpg") ;
+    padding:10px;
+    margin: 10px;
+    background: url("Img/nav.jpg") ;
     background-size: cover;
+    color:rgb(250, 226, 7);
+    text-shadow: 2px 2px rgb(0, 0, 0);
+    opacity: 0.8;
+
+}
+
+.option
+{
+    font-size: 40px;
     padding: 5px;
     text-align: center;
-    color:rgb(250, 226, 7);
-    font-size: 40px;
-    text-shadow: 2px 2px rgb(0, 0, 0);
+    border: 1px solid rgb(250, 226, 7)
 
+}
 
-
+.option:hover
+{
+    cursor: pointer;
+    background-color: rgb(63, 62, 62)
 
 }
 
 #content
 {
-    height: 600px;
+    height: 650px;
     padding: 10px;
     background-color: rgb(31, 73, 40);
     color: rgb(202, 182, 5);
+    font-family: 'Oswald', sans-serif;
+    text-shadow: 2px 2px rgb(2, 2, 2);
     font-size: 30px;
-
     text-align: center;
+    font-weight: 700;
     background: rgb(24, 39, 23)
-    
-
-    
-    
-
-
-
-
-
-
-
 }
 
 #footer
@@ -79,3 +85,4 @@ body
     font-size: 25px;
 
 }
+
